Closed Bug 523755 Opened 15 years ago Closed 15 years ago

In nsCSSDeclaration, check unit against eCSSUnit_None, instead of checking value against nsCSSValue(eCSSUnit_None)

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: dholbert)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
trivial patch -- just removes two unneeded nsCSSValue declarations.
Attachment #407664 - Flags: review?(dbaron)
Depends on: 475214
http://hg.mozilla.org/mozilla-central/rev/b885ff888998
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Assignee: nobody → dholbert
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: