Bug 523755: Remove two unneeded nsCSSValue variable declarations in nsCSSDeclaration. r=dbaron